--- a/my-project/package.json
+++ b/my-project/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.3.1",
     "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
