--- a/my-project/package.json
+++ b/my-project/package.json
@@ -23,6 +23,7 @@
     "react-dropdown-select": "^4.9.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
