--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@reduxjs/toolkit": "^1.9.5",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "dotenv": "^16.3.1",
