--- a/my-project/package.json
+++ b/my-project/package.json
@@ -24,6 +24,7 @@
     "react-dropdown-select": "^4.9.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-notification-system": "^0.4.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
